--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Mute</string>
     <string name="tile_name">Mute</string>
+    <string name="dialog_title">Mute until</string>
 </resources>
