--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Mute</string>
     <string name="tile_name">Mute</string>
     <string name="dialog_title">Mute until</string>
+    <string name="notification_title">Muted</string>
 </resources>
